# ws-reconnect-manager

./: LICENSE  README.md  pyproject.toml
src/ws_reconnect_manager/: __init__.py  client.py  exceptions.py  policies.py
tests/: test_client.py
