[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ws-reconnect-manager"
version = "0.1.0"
description = "Production-grade asyncio WebSocket client with auto-reconnect, heartbeat monitoring, and dead connection detection."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Chitransh" }
]
keywords = ["websocket", "asyncio", "aiohttp", "reconnect", "heartbeat"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/chitransh819/ws-reconnect-manager"
Issues = "https://github.com/chitransh819/ws-reconnect-manager/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ws_reconnect_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
